<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_form"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/head" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/self_assesment_test"
        android:layout_gravity="center_horizontal"
        android:textColor="#fff"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="6dp" />


    <androidx.cardview.widget.CardView
        android:padding="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_margin="8sp" >



        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="#5142B2"/>

        <ImageView
            android:id="@+id/risk_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="80dp" />

        <TextView
            android:id="@+id/risk_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="140dp"
            android:textColor="#5142B2"
            android:textSize="25sp"
            android:fontFamily="@font/roboto"/>

        <TextView
            android:id="@+id/risk_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="140dp"
            android:textColor="#0C8AEA"
            android:textSize="20sp"
            android:fontFamily="@font/roboto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <TextView
            android:id="@+id/warning_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#0C8AEA"
            android:text="@string/warning_result"
            android:textSize="18sp"
            android:layout_marginTop="250dp" />


        <Button
            android:id="@+id/diet_plan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_blue_border"
            android:layout_marginTop="50dp"
            android:text="@string/diet_plan"
            android:layout_gravity="center_horizontal"
            android:textColor="#5142B2"
            android:textSize="20sp"
            android:fontFamily="@font/roboto" />

        <Button
            android:id="@+id/excersise_plan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_blue_border"
            android:text="@string/excersise_plan"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#5142B2"
            android:textSize="20sp"
            android:fontFamily="@font/roboto" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>